# coro_assignment5

./: CMakeLists.txt  package.xml  pick-and-place.lisp  pick-and-place_3.lisp  spawn_three_bricks.sh  test1.sh  test2.sh  test3.sh  test4.sh  test5.sh
data/: assignment5Input.txt
include/assignment5/: amuhizi.h  studentid.h
src/: amuhiziApplication.cpp  amuhiziImplementation.cpp
